5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_2425.log
== TEST (2019-04-02 20:46:38) 
-- CODE:
d = float(input("digite a distância: "))
cg = float(input("digite o combustível gasto: "))
cm = 
-- ERROR:
File "XXXX", line 3
    cm = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:44) 
-- CODE:
d = float(input("digite a distância: "))
cg = float(input("digite o combustível gasto: "))
cm = float(input("digite o combustível gasto: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:50) 
-- CODE:
d = float(input("digite a distância: "))
cg = float(input("digite o combustivel gasto: "))
cm = float(input("digite o combustivel gasto: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:51) 
-- CODE:
d = float(input("digite a distância: "))
cg = float(input("digite o combustivel gasto: "))
cm = float(input("digite o combustivel gasto: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:58) 
-- CODE:
d = float(input("digite a distancia: "))
cg = float(input("digite o combustivel gasto: "))
cm = float(input("digite o combustivel gasto: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:47:57) 
-- CODE:
d = float(input("digite a distancia: "))
cg = float(input("digite o combustivel gasto: "))
cm = float(input("digite o consumo medio: "))

g = 1000

a = d/g 
b = cg/g
c = cm/g

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:50:06) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = a*b

print(round(f,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = a*b
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:50:24) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d*cg

print(round(f,2))
-- OUTPUT:
57.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:50:35) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:50:44) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3))
-- EXECUTION TIME:
0.168433
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:51:17) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f + "km/l",3))
-- EXECUTION TIME:
0.206125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 6, in <module>
    print(round(f + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:51:17) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(f + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:51:42) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg
g = f + "km/l"

print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g = f + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:52:11) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3) + "km/l")
-- EXECUTION TIME:
0.255684
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 6, in <module>
    print(round(f,3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:52:12) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(f,3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:52:35) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3 + "km/l"))
-- EXECUTION TIME:
0.160531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 6, in <module>
    print(round(f,3 + "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:52:35) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3 + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(f,3 + "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:53:14) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg
g = round(f,3)
h = g + "km/l"

print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    h = g + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:53:40) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg
g = round(f,3)


print(f + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(f + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:54:29) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg
g = round(f,3)


print(f,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:55:18) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3),"km/l"")
-- ERROR:
File "XXXX", line 6
    print(round(f,3),"km/l"")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:55:22) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:55:27) 
-- CODE:
d = float(input("digite a distancia em km: "))
cg = float(input("digite o combustivel gasto em L: "))

f = d/cg

print(round(f,3),"km/l")
-- EXECUTION TIME:
0.155919
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
